--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+
+@font-face {
+    font-family:'Baloo 2 Regular';
+    src: url('../fonts/Baloo2-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Gochi Hand Regular';
+    src: url('../fonts/GochiHand-Regular.ttf') format('truetype');
+}
 #app {
     display: flex;
     flex-direction: column;
@@ -5,26 +15,93 @@
     align-items: center;
 }
 
+#header {
+    padding: 3em 1em 1em;
+    font-size: 2.5rem;
+    background-color: #7B4C3D;
+    color: #F8CC9D;
+    text-align: center;
+    font-family: 'Gochi Hand Regular';
+    background-image: url('../images/title.png');
+    background-size: contain;
+    background-repeat: repeat-x;
+}
+
 #display {
-    flex: 1;
+    font-family: 'Baloo 2 Regular';
+    background-color: #F8CC9D;
+    color: #3A2723;
+}
+
+
+.display__title {
+    text-align: center;
+    font-size: 1.5em;
+}
+
+#header #cat_breed select{
+    border: none;
+    padding: 1em 1.5em;
+    font-size: 1.5rem;
+}
+
+.cat_image {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    border-radius: 4em;
+}
+
+.cat_description {
+    padding: 1em 2em;
+    font-size: 1.7rem;
+    font-family: 'Baloo 2 Regular';
+}
+
+.cat_nature {
+    text-align: center;
+    padding: 1em;
+    font-size: 1.5rem;
+}
+
+.cat_stats {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 1.5em 4rem;
+    font-size: 1.5rem;
 }
 
-.display__figure {
-
-    margin: 0 auto;
-}
-
-.display__title {
+.select_cat {
+    display: block;
+	font-family: 'Baloo 2 Regular';
+	font-weight: 700;
+	color: #3A2723;
+	line-height: 1.3;
+	width: 100%;
+	max-width: 100%;
+	box-sizing: border-box;
+	border-radius: 0.9em;
+	background-color: rgb(214, 144, 77);
     text-align: center;
 }
 
-.display__image {
-    width: 100%;
-    margin: 0 auto;
-    max-width: 900px;
-    height: auto;
+
+
+meter::-webkit-meter-optimum-value {
+    box-shadow: 0 5px 5px -5px #999 inset;
+    background-image: linear-gradient(
+      90deg, 
+      #8bcf69 5%, 
+      #e6d450 5%,
+      #e6d450 15%,
+      #f28f68 15%,
+      #f28f68 55%,
+      #cf82bf 55%,
+      #cf82bf 95%,
+      #719fd1 95%,
+      #719fd1 100%
+    );
+    background-size: 100% 100%;
 }
